--- a/fullpage/index.html
+++ b/fullpage/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="fullpage">
-        <div class="section">
+        <div class="section home">
             <div class="container">
                 <div class="navbar">
                     <div class="logo">
@@ -42,9 +42,25 @@
                 </div>
             </div>
         </div>
-    </div>
+   
     <section class="section">
         <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="./image/logo@2x.png" alt="배달의민족">
+                </div>
+                <div class="app_download">
+                   <img src="./image/btn-download-black-pc@3x.png" alt="">
+                </div>
+                <div class="sns">
+                    <ul>
+                        <li><a href="#"><img src="./image/iconFacebook@2x.png" alt="페이스북"></a></li>
+                        <li><a href="#"><img src="./image/iconInstagram@2x.png" alt="인스타그램"></a></li>
+                        <li><a href="#"><img src="./image/iconBlog@2x.png" alt="블로그"></a></li>
+                        <li><a href="#"><img src="./image/iconYoutube@2x.png" alt="유튜브"></a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="section_detail">
                 <div class="txtWrap">
                     <img src="./image/ctn01_text_02@2x.png" alt="">
@@ -53,6 +69,14 @@
                 </div>
                 <div class="backgroundImage">
                     <img src="./image/img-bike@2x.png" alt="">
+                </div>
+                <div class="dot">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
                 </div>
             </div>
         </div>
@@ -70,6 +94,14 @@
                 <div class="backgroundImage">
                     <img src="./image/img-people@2x.png" alt="">
                 </div>
+                <div class="dot">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                </div>
             </div>
         </div>
     </section>
@@ -85,6 +117,14 @@
                 <div class="backgroundImage">
                     <img src="./image/img-present@2x.png" alt="">
                 </div>
+                <div class="dot">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                </div>
             </div>
         </div>
     </section>
@@ -99,6 +139,14 @@
                 </div>
                 <div class="backgroundImage">
                     <img src="./image/img-shoppinglive_re.png" alt="">
+                </div>
+                <div class="dot">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
                 </div>
             </div>
         </div>
@@ -117,6 +165,14 @@
                 <div class="backgroundImage">
                     <img src="./image/bmart_rider@2x.png" alt="">
                 </div>
+                <div class="dot">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                </div>
             </div>
         </div>
     </section>
@@ -131,6 +187,14 @@
                 </div>
                 <div class="backgroundImage">
                     <img src="./image/img-flag@2x.png" alt="">
+                </div>
+                <div class="dot">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
+                    <img src="./image/dotScroll02@2x.png" alt="">
                 </div>
             </div>
         </div>
@@ -176,7 +240,8 @@
             </div>
         </div>
     </div>
-    </div>
+    </div> 
+</div>
     <script>
         new fullpage("#fullpage", {
             //options here
