--- a/fullpage/index.html
+++ b/fullpage/index.html
@@ -83,6 +83,22 @@
     </section>
     <section class="section">
         <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="./image/logo@2x.png" alt="배달의민족">
+                </div>
+                <div class="app_download">
+                   <img src="./image/btn-download-white@3x.png" alt="">
+                </div>
+                <div class="sns">
+                    <ul>
+                        <li><a href="#"><img src="./image/iconFacebook@2x.png" alt="페이스북"></a></li>
+                        <li><a href="#"><img src="./image/iconInstagram@2x.png" alt="인스타그램"></a></li>
+                        <li><a href="#"><img src="./image/iconBlog@2x.png" alt="블로그"></a></li>
+                        <li><a href="#"><img src="./image/iconYoutube@2x.png" alt="유튜브"></a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="section_detail">
                 <div class="txtWrap">
                     <img src="./image/ctn02_text_01@2x.png" alt="">
@@ -107,6 +123,22 @@
     </section>
     <section class="section">
         <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="./image/logo@2x.png" alt="배달의민족">
+                </div>
+                <div class="app_download">
+                   <img src="./image/btn-download-white@3x.png" alt="">
+                </div>
+                <div class="sns">
+                    <ul>
+                        <li><a href="#"><img src="./image/iconFacebook@2x.png" alt="페이스북"></a></li>
+                        <li><a href="#"><img src="./image/iconInstagram@2x.png" alt="인스타그램"></a></li>
+                        <li><a href="#"><img src="./image/iconBlog@2x.png" alt="블로그"></a></li>
+                        <li><a href="#"><img src="./image/iconYoutube@2x.png" alt="유튜브"></a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="section_detail">
                 <div class="txtWrap">
                     <img src="./image/ctn05_text_01@2x.png" alt="">
@@ -130,6 +162,22 @@
     </section>
     <section class="section">
         <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="./image/logo@2x.png" alt="배달의민족">
+                </div>
+                <div class="app_download">
+                   <img src="./image/btn-download-white@3x.png" alt="">
+                </div>
+                <div class="sns">
+                    <ul>
+                        <li><a href="#"><img src="./image/iconFacebook@2x.png" alt="페이스북"></a></li>
+                        <li><a href="#"><img src="./image/iconInstagram@2x.png" alt="인스타그램"></a></li>
+                        <li><a href="#"><img src="./image/iconBlog@2x.png" alt="블로그"></a></li>
+                        <li><a href="#"><img src="./image/iconYoutube@2x.png" alt="유튜브"></a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="section_detail">
 
                 <div class="txtWrap">
@@ -153,6 +201,22 @@
     </section>
     <section class="section">
         <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="./image/logo@2x.png" alt="배달의민족">
+                </div>
+                <div class="app_download">
+                   <img src="./image/btn-download-white@3x.png" alt="">
+                </div>
+                <div class="sns">
+                    <ul>
+                        <li><a href="#"><img src="./image/iconFacebook@2x.png" alt="페이스북"></a></li>
+                        <li><a href="#"><img src="./image/iconInstagram@2x.png" alt="인스타그램"></a></li>
+                        <li><a href="#"><img src="./image/iconBlog@2x.png" alt="블로그"></a></li>
+                        <li><a href="#"><img src="./image/iconYoutube@2x.png" alt="유튜브"></a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="section_detail">
 
                 <div class="txtWrap">
@@ -178,6 +242,22 @@
     </section>
     <section class="section">
         <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="./image/logo@2x.png" alt="배달의민족">
+                </div>
+                <div class="app_download">
+                   <img src="./image/btn-download-white@3x.png" alt="">
+                </div>
+                <div class="sns">
+                    <ul>
+                        <li><a href="#"><img src="./image/iconFacebook@2x.png" alt="페이스북"></a></li>
+                        <li><a href="#"><img src="./image/iconInstagram@2x.png" alt="인스타그램"></a></li>
+                        <li><a href="#"><img src="./image/iconBlog@2x.png" alt="블로그"></a></li>
+                        <li><a href="#"><img src="./image/iconYoutube@2x.png" alt="유튜브"></a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="section_detail">
 
                 <div class="txtWrap">
@@ -215,6 +295,7 @@
                         <li><a href="#"><img src="./image/icon-blog@2x.png" alt=""></a></li>
                         <li><a href="#"><img src="./image/icon-youtube@2x.png" alt=""></a></li>
                     </ul>
+                 </div>   
                     <div class="copyright">
                         <div class="copyright_1">
                             <p>(주)우아한형제들</p>
@@ -225,14 +306,13 @@
                             <p><a href="#">사업자정보확인</p>
                             <p>통신판매업 : 서울 송파-0515</p>
                         </div>
-                        <div class="copyright_2">
+                        <div class="copyright_1">
                             <p>전자금융분쟁처리</p>
                             <p>TEL : 1600-0987</p>
                             <p>FAX : 050-6050-0400</p>
                             <p>MAIL : <a href="mailto:help@woowahan.com">help@woowahan.com</a></p>
                         </div>
                     </div>
-                </div>
             </div>
             <div class="footer_right">
                 <img src="./image/footer-title@2x.png" alt="">
