--- a/20220905_fullpage/fullpage01.html
+++ b/20220905_fullpage/fullpage01.html
@@ -14,13 +14,13 @@
 </head>
 <body>
 <div class="navTop px-5">
-    <h1><a href="#">LOGO</a></h1>
+    <h1><a href="#"><img src="./image/logo@2x.png" alt=""></a></h1>
     <nav class="gnb">
         <ul>
-            <li data-menuanchor="m1st"><a href="#m1st">menu1</a></li>
-            <li data-menuanchor="m2st"><a href="#m2st">menu2</a></li>
-            <li data-menuanchor="m3st"><a href="#m3st">menu3</a></li>
-            <li data-menuanchor="m4st"><a href="#m4st">menu4</a></li>
+            <li data-menuanchor="m1st"><a href="#m1st">home</a></li>
+            <li data-menuanchor="m2st"><a href="#m2st">order</a></li>
+            <li data-menuanchor="m3st"><a href="#m3st">B-mart</a></li>
+            <li data-menuanchor="m4st"><a href="#m4st">pay</a></li>
         </ul>
     </nav>
 </div>
@@ -30,9 +30,6 @@
 
         <div class="wrap">
             <!-- .wrap w100% h100vh -->
-            <video id="myVideo" data-autoplay muted loop>
-                <source src="movie/sample01.mp4">
-            </video>
             <div class="container bg-success txtWrap">
                 <div class="container">
                     <div class="row">
@@ -45,7 +42,7 @@
             </div>
         </div>
         <div class="scrollBtn">
-            <a href="#m2st"><img src="images/btn_scroll.png" alt=""></a>
+            <a href="#m2st"><img src="./image/scroll@2x.png" alt=""></a>
         </div>
     </div>
     <!-- # 2 -->
@@ -68,6 +65,9 @@
                 <h2>나를 위한 게 뭘까?</h2>
             </div>
         </div>
+        <div class="scrollBtn">
+            <a href="#m3st"><img src="./image/scroll@2x.png" alt=""></a>
+        </div>
     </div>
 
     <!-- # 4 -->
@@ -79,6 +79,9 @@
                     <a href="#!" class="btn btn-primary"> more</a>
                 </div>
             </div>
+        </div>
+        <div class="scrollBtn">
+            <a href="#m4st"><img src="./image/scroll@2x.png" alt=""></a>
         </div>
     </div>
 
