--- a/20220905_fullpage/fullpage01.html
+++ b/20220905_fullpage/fullpage01.html
@@ -17,10 +17,10 @@
     <h1><a href="#"><img src="./image/logo@2x.png" alt=""></a></h1>
     <nav class="gnb">
         <ul>
-            <li data-menuanchor="m1st"><a href="#m1st">home</a></li>
-            <li data-menuanchor="m2st"><a href="#m2st">order</a></li>
-            <li data-menuanchor="m3st"><a href="#m3st">B-mart</a></li>
-            <li data-menuanchor="m4st"><a href="#m4st">pay</a></li>
+            <li data-menuanchor="m1st"><a href="#m1st">Home</a></li>
+            <li data-menuanchor="m2st"><a href="#m2st">Live</a></li>
+            <li data-menuanchor="m3st"><a href="#m3st">Coupon</a></li>
+            <li data-menuanchor="m4st"><a href="#m4st">Pay</a></li>
         </ul>
     </nav>
 </div>
@@ -30,12 +30,12 @@
 
         <div class="wrap">
             <!-- .wrap w100% h100vh -->
-            <div class="container bg-success txtWrap">
+            <div class="container txtWrap">
+                <img src="./image/ctn01_text_02@2x.png" alt="">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4 offset-md-8 bg-primary vView">
-                            <div class="active"><a href="#">menu1</a></div>
-                            <div><a href="#">menu2</a></div>
+                        <div class="col-md-4 offset-md-8 vView">
+                            <div><a href="#"><img src="./image/img-appstore-default@2x.png" alt=""></a></div>
                         </div>
                     </div>
                 </div>
@@ -47,18 +47,18 @@
     </div>
     <!-- # 2 -->
     <div class="section page2" data-anchor="m2st">
-        <div class="container text-center bg-success txtWrap">
-            Lorem ipsum dolor sit amet.
+        <div class="container text-center txtWrap sector">
+            <img src="./image/ctn06_text_01@2x.png" alt="">
         </div>
     </div>
 
     <!-- # 3 -->
     <div class="section page3"  data-anchor="m3st">
         <div class="wrap">
-            <div class="txt1"><h2>남들에게 좋다는데, 나한테는 맞지 않네?</h2></div>
+            <div class="txt1"><h2>너에게 밥을 보낸다!</h2></div>
             <div class="txt2 text-center">
-                <h2>환경에 따라 변하는 나,</h2>
-                <h2>진짜 내 타입이 뭐지?</h2>
+                <h2>지금 밥 한끼 보내주고 싶은 분께</h2>
+                <h2>배민상품권을 선물하세요!</h2>
             </div>
             <div class="txt3">
                 <h2>많은 정보와 광고 속,</h2>
@@ -74,9 +74,9 @@
     <div class="section page4"  data-anchor="m4st">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 offset-md-3 text-center text-md-start p-5 p-md-0">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum molestias sed perferendis in voluptatibus numquam provident eos unde vel maxime.</p>
-                    <a href="#!" class="btn btn-primary"> more</a>
+                <div class="col-md-6 offset-md-3 text-center text-md-start p-5 p-md-0 sector">
+                    <img src="./image/ctn03_text_02@2x.png" alt="">
+                    <a href="#!" class="btn btn-primary">배민페이 만들러가기</a>
                 </div>
             </div>
         </div>
