--- a/20220905_fullpage/fullpage01.html
+++ b/20220905_fullpage/fullpage01.html
@@ -56,6 +56,9 @@
             <div class="container text-center txtWrap sector">
                 <img src="./image/ctn02_text_01@2x.png" alt="">
             </div>
+            <div class="order">
+                <h3>주문하러가기</h3>
+            </div>
             <div class="scrollBtn">
                 <a href="#m2st"><img src="./image/scroll@2x.png" alt=""></a>
             </div>
@@ -93,30 +96,33 @@
         <div class="section fp-auto-height">
             <div class="container py-5">
                 <div class="footer">
-                    <div class="link">
+                    <div class="copyright">
+                        <p>(주)우아한형제들</p>
+                        <p>서울시 송파구 위례성대로 2 장은빌딩 2층</p>
+                        <p>사업자번호 : 120-87-65763</p>
+                        <p>통신판매업 : 서울 송파-0515</p>
+                    </div>
+                    <div class="sns">
                         <ul>
-                            <li><a href="#"><img src="./image/link_woowahan@2x.png" alt=""></a></li>
-                            <li><a href="#"><img src="./image/link-store@2x.png" alt=""></a></li>
-                            <li><a href="#"><img src="./image/link-rider@2x.png" alt=""></a></li>
-                            <li><a href="#"><img src="./image/link_ceosite@2x.png" alt=""></a></li>
+                            <li><a href="#"><img src="./image/icon-facebook@2x.png" alt=""></a></li>
+                            <li><a href="#"><img src="./image/icon-blog@2x.png" alt=""></a></li>
+                            <li><a href="#"><img src="./image/icon-instagram@2x.png" alt=""></a></li>
+                            <li><a href="#"><img src="./image/icon-youtube@2x.png" alt=""></a></li>
                         </ul>
                     </div>
-                    <div class="sns text-center">
-                        <a href="#"><img src="./image/icon-facebook@2x.png" alt=""></a>
-                        <a href="#"><img src="./image/icon-blog@2x.png" alt=""></a>
-                        <a href="#"><img src="./image/icon-instagram@2x.png" alt=""></a>
-                        <a href="#"><img src="./image/icon-youtube@2x.png" alt=""></a>
-                    </div>
-                    <div class="app text-center">
-                        <img src="./image/footer-title@2x.png" alt="">
-                    </div>
                 </div>
-                <div class="copyright">
-                    <p>(주)우아한형제들</p>
-                    <p>서울시 송파구 위례성대로 2 장은빌딩 2층</p>
-                    <p>사업자번호 : 120-87-65763</p>
-                    <p>통신판매업 : 서울 송파-0515</p>
+                <div class="footer_link">
+                   <div class="link">
+                    <ul>
+                        <li><a href="#"><img src="./image/link-rider@2x.png" alt=""></a></li>
+                        <li><a href="#"><img src="./image/link-store@2x.png" alt=""></a></li>
+                        <li><a href="#"><img src="./image/link_ceosite@2x.png" alt=""></a></li>
+                        <li><a href="#"><img src="./image/link_woowahan@2x.png" alt=""></a></li>
+                    </ul>
+                </div> 
                 </div>
+                
+
             </div>
         </div>
     </div>
