--- a/20220905_fullpage/fullpage01.html
+++ b/20220905_fullpage/fullpage01.html
@@ -33,15 +33,15 @@
         <div class="section page1" data-anchor="m1st">
             <div class="wrap">
                 <!-- .wrap w100% h100vh -->
-                <div class="container txtWrap">
-                    <img src="./image/ctn01_text_02@2x.png" alt="">
+                <div class="container bg-success txtWrap">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-4 offset-md-8 vView download">
-                                <ul>
-                                    <li><a href="#"><img src="./image/img-appstore-default@2x.png" alt=""></a></li>
-                                    <li><a href="#"><img src="./image/img-googleplay-default@2x.png" alt=""></a></li>
-                                </ul>
+                            <div class="col-md-4 offset-md-8 vView">
+                                <img src="./image/ctn01_text_02@2x.png" alt="">
+                            </div>
+                            <div class="download">
+                                <a href="#"><img src="./image/img-appstore-default@2x.png" alt=""></a>
+                                <a href="#"><img src="./image/img-googleplay-default@2x.png" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -112,17 +112,15 @@
                     </div>
                 </div>
                 <div class="footer_link">
-                   <div class="link">
-                    <ul>
-                        <li><a href="#"><img src="./image/link-rider@2x.png" alt=""></a></li>
-                        <li><a href="#"><img src="./image/link-store@2x.png" alt=""></a></li>
-                        <li><a href="#"><img src="./image/link_ceosite@2x.png" alt=""></a></li>
-                        <li><a href="#"><img src="./image/link_woowahan@2x.png" alt=""></a></li>
-                    </ul>
-                </div> 
+                    <div class="link">
+                        <ul>
+                            <li><a href="#"><img src="./image/link-rider@2x.png" alt=""></a></li>
+                            <li><a href="#"><img src="./image/link-store@2x.png" alt=""></a></li>
+                            <li><a href="#"><img src="./image/link_ceosite@2x.png" alt=""></a></li>
+                            <li><a href="#"><img src="./image/link_woowahan@2x.png" alt=""></a></li>
+                        </ul>
+                    </div>
                 </div>
-                
-
             </div>
         </div>
     </div>
